Target blank for nav links

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@ title: Tomas Mulder's Resume
     <a href="http://www.tcmulder.com">www.tcmulder.com</a>
 
     <h3>GitHub</h3>
-    <a href="https://github.com/tcmulder">GitHub</a>
+    <a href="https://github.com/tcmulder" target="_blank">GitHub</a>
 
     <h3>CodePen</h3>
-    <a href="http://codepen.io/tcmulder/">CodePen</a>
+    <a href="http://codepen.io/tcmulder/" target="_blank">CodePen</a>
 
     <h3>Twitter</h3>
-    <a href="https://twitter.com/tcmulder">Twitter</a>
+    <a href="https://twitter.com/tcmulder" target="_blank">Twitter</a>
 
 </article><!-- .resume -->
