--- a/index.html
+++ b/index.html
@@ -3,148 +3,199 @@ title: Tomas Mulder's Resume
 ---
 <article class="resume">
 
-    <p><em>Note: work in progress</em></p>
+    <!-- - - - - - - - - - - - - - - - >
+        ::Details Column
+    <- - - - - - - - - - - - - - - - -->
+    <div class="main-torso__col detail">
+
+        <!-- - - - - - - - - - - - - - - - >
+            ::Objective
+        <- - - - - - - - - - - - - - - - -->
+        <h2>Objective</h2>
+
+        <p>To develop creatively inspiring, functionally empowering, visually compelling, information rich websites.</p>
+
+        <!-- - - - - - - - - - - - - - - - >
+            ::Qualifications
+        <- - - - - - - - - - - - - - - - -->
+        <h2>Qualifications</h2>
+
+        <h3>Capabilities</h3>
+        <ul>
+            <li>Website Development</li>
+            <li>WordPress Theming</li>
+            <li>Website Design</li>
+            <li>Process Formation</li>
+            <li>Leadership and Mentoring</li>
+            <li>Information Architecture</li>
+            <li>Graphics Design</li>
+            <li>Usability Testing</li>
+        </ul>
+
+        <h3>Technologies</h3>
+        <ul>
+            <li>HTML5 Markup</li>
+            <li>CSS3 Styling</li>
+            <li>SCSS Preprocessing</li>
+            <li>JavaScript/jQuery/Ajax</li>
+            <li>WordPress Codex</li>
+            <li>PHP/MySQL Back-End</li>
+            <li>Gulp/Grunt Build Tools</li>
+            <li>Git Version Control</li>
+        </ul>
+
+        <h3>Software</h3>
+        <ul>
+            <li>Sublime Text</li>
+            <li>iTerm</li>
+            <li>MAMP</li>
+            <li>VirtualBox/Vagrant</li>
+            <li>Photoshop</li>
+            <li>Illustrator</li>
+            <li>Atom</li>
+            <li>Chrome DevTools</li>
+        </ul>
+
+        <h3>Character</h3>
+        <ul>
+            <li>Hard Worker</li>
+            <li>Well Organized</li>
+            <li>Great Communicator</li>
+            <li>Effective Leader</li>
+            <li>Team Player</li>
+            <li>Strong Ethics</li>
+            <li>Quick Learner</li>
+            <li>Always Improving</li>
+        </ul>
+
+        <!-- - - - - - - - - - - - - - - - >
+            ::Contact
+        <- - - - - - - - - - - - - - - - -->
+        <h2>Contact</h2>
+
+        <h3>Website</h3>
+        <a href="http://www.tcmulder.com">www.tcmulder.com</a>
+
+        <h3>GitHub</h3>
+        <a href="https://github.com/tcmulder" target="_blank">GitHub</a>
+
+        <h3>CodePen</h3>
+        <a href="http://codepen.io/tcmulder/" target="_blank">CodePen</a>
+
+        <h3>Twitter</h3>
+        <a href="https://twitter.com/tcmulder" target="_blank">Twitter</a>
+
+    </div> <!-- .detail -->
 
     <!-- - - - - - - - - - - - - - - - >
-        ::Objective
+        ::Experience Column
     <- - - - - - - - - - - - - - - - -->
-    <h2>Objective</h2>
+    <div class="main-torso__col exp">
 
-    <p>To develop creatively inspiring, functionally empowering, visually compelling, information rich websites.</p>
+        <div class="exp__group exp__group--title">
+            <h2>Experience</h2>
+        </div>
+
+        <!-- - - - - - - - - - - - - - - - >
+            ::Experience
+        <- - - - - - - - - - - - - - - - -->
+        <div class="exp__group exp__group--zenman">
+            <h3>Front-End Developer—Zenman Productions 2012-Present</h3>
+            <ul>
+                <li>Developed custom WordPress themes and other front-end and light back-end deliverables.</li>
+                <li>Crafted development processes and mentored junior developers to enhance Zenman’s level of quality.</li>
+            </ul>
+        </div>
+
+        <div class="exp__group exp__group--du">
+
+            <h3>University of Denver 2011-2012</h3>
+            <ul>
+                <li>Received a Master of Applied Science degree in Web Design and Development (ICT program).</li>
+                <li>Earned a 4.0 GPA.</li>
+            </ul>
+        </div>
+
+        <div class="exp__group exp__group--tcmulder">
+            <h3>Freelance Web Designer—tcmulder.com 2010-2012 </h3>
+            <ul>
+                <li>Developed WordPress-powered websites from scratch and as redesigns.</li>
+                <li>Designed a logo and a website header graphic to meet client specifications.</li>
+            </ul>
+        </div>
+
+        <div class="exp__group exp__group--usmc">
+            <h3>Infantry Scout—1st LAR United States Marine Corps 2006-2010 </h3>
+            <ul>
+                <li>Handled primary computer technology and communication needs for entire platoon as chief dispatcher.</li>
+                <li>Instructed hundreds of Marines in indoor simulated marksmanship trainer.\</li>
+            </ul>
+        </div>
+
+        <div class="exp__group exp__group--ptc">
+            <h3>Teachers Aide—PTC Department 2004-2006 </h3>
+            <ul>
+                <li>Assisted students as teacher’s aide in four web design courses.</li>
+                <li>Developed demonstration pieces for professors to present to their classes.</li>
+            </ul>
+        </div>
+
+        <div class="exp__group exp__group--t-creative">
+            <h3>Freelance Visual Designer—t-Creative 2002-2006 </h3>
+            <ul>
+                <li>Created brochure, media CD, and two websites for PTC Department at Montana Tech.</li>
+                <li>Designed several small websites for clients, several that included PayPal ecommerce functionality.</li>
+            </ul>
+        </div>
+
+        <div class="exp__group exp__group--tech">
+            <h3>Montana Tech of The University of Montana 2002-2006</h3>
+            <ul>
+                <li>Received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
+                <li>Earned a 4.0 GPA.</li>
+            </ul>
+        </div>
+
+        <div class="exp__timeline">
+            <!-- in emmet... .exp__year{20$$@-}*16 -->
+            <span class="exp__year">today</span>
+            <span class="exp__year">2016</span>
+            <span class="exp__year">2015</span>
+            <span class="exp__year">2014</span>
+            <span class="exp__year">2013</span>
+            <span class="exp__year">2012</span>
+            <span class="exp__year">2011</span>
+            <span class="exp__year">2010</span>
+            <span class="exp__year">2009</span>
+            <span class="exp__year">2008</span>
+            <span class="exp__year">2007</span>
+            <span class="exp__year">2006</span>
+            <span class="exp__year">2005</span>
+            <span class="exp__year">2004</span>
+            <span class="exp__year">2003</span>
+            <span class="exp__year">2002</span>
+        </div>
+
+    </div> <!-- .exp -->
 
     <!-- - - - - - - - - - - - - - - - >
-        ::Qualifications
+        ::Achievements Column
     <- - - - - - - - - - - - - - - - -->
-    <h2>Qualifications</h2>
+    <div class="main-torso__col achieve">
 
-    <h3>Capabilities</h3>
-    <ul>
-        <li>Website Development</li>
-        <li>WordPress Theming</li>
-        <li>Website Design</li>
-        <li>Process Formation</li>
-        <li>Leadership and Mentoring</li>
-        <li>Information Architecture</li>
-        <li>Graphics Design</li>
-        <li>Usability Testing</li>
-    </ul>
+        <!-- - - - - - - - - - - - - - - - >
+            ::Achievements
+        <- - - - - - - - - - - - - - - - -->
+        <h2>Achievements</h2>
 
-    <h3>Technologies</h3>
-    <ul>
-        <li>HTML5 Markup</li>
-        <li>CSS3 Styling</li>
-        <li>SCSS Preprocessing</li>
-        <li>JavaScript/jQuery/Ajax</li>
-        <li>WordPress Codex</li>
-        <li>PHP/MySQL Back-End</li>
-        <li>Gulp/Grunt Build Tools</li>
-        <li>Git Version Control</li>
-    </ul>
+        <ul>
+            <li>Promoted to Senior Developer at Zenman for demonstrating  leadership and mentoring capacity, 2015.</li>
+            <li>Promoted to Lead Developer at Zenman for exhibiting advanced development skills, 2014.</li>
+            <li>Marine Corps Good Conduct Medal for three years of honorable and faithful service, 2009.</li>
+            <li>Marine Corps Certificate of Commendation for outstanding achievement in duties, 2007.</li>
+            <li>Outstanding Achievement award in the Professional and Technical Communication Program, 2006.</li>
+        </ul>
 
-    <h3>Software</h3>
-    <ul>
-        <li>Sublime Text</li>
-        <li>iTerm</li>
-        <li>MAMP</li>
-        <li>VirtualBox/Vagrant</li>
-        <li>Photoshop</li>
-        <li>Illustrator</li>
-        <li>Atom</li>
-        <li>Chrome DevTools</li>
-    </ul>
-
-    <h3>Character</h3>
-    <ul>
-        <li>Hard Worker</li>
-        <li>Well Organized</li>
-        <li>Great Communicator</li>
-        <li>Effective Leader</li>
-        <li>Team Player</li>
-        <li>Strong Ethics</li>
-        <li>Quick Learner</li>
-        <li>Always Improving</li>
-    </ul>
-
-    <!-- - - - - - - - - - - - - - - - >
-        ::Experience
-    <- - - - - - - - - - - - - - - - -->
-    <h2>Experience</h2>
-
-    <h3>Front-End Developer—Zenman Productions 2012-Present</h3>
-    <ul>
-        <li>Developed custom WordPress themes and other front-end and light back-end deliverables.</li>
-        <li>Crafted development processes and mentored junior developers to enhance Zenman’s level of quality.</li>
-    </ul>
-
-    <h3>Freelance Web Designer—tcmulder.com 2010-2012 </h3>
-    <ul>
-        <li>Developed WordPress-powered websites from scratch and as redesigns.</li>
-        <li>Designed a logo and a website header graphic to meet client specifications.</li>
-    </ul>
-
-    <h3>Infantry Scout—1st LAR United States Marine Corps 2006-2010 </h3>
-    <ul>
-        <li>Handled primary computer technology and communication needs for entire platoon as chief dispatcher.</li>
-        <li>Instructed hundreds of Marines in indoor simulated marksmanship trainer.\</li>
-    </ul>
-
-    <h3>Teachers Aide—PTC Department 2004-2006 </h3>
-    <ul>
-        <li>Assisted students as teacher’s aide in four web design courses.</li>
-        <li>Developed demonstration pieces for professors to present to their classes.</li>
-    </ul>
-
-    <h3>Freelance Visual Designer—t-Creative 2002-2006 </h3>
-    <ul>
-        <li>Created brochure, media CD, and two websites for PTC Department at Montana Tech.</li>
-        <li>Designed several small websites for clients, several that included PayPal ecommerce functionality.</li>
-    </ul>
-
-    <!-- - - - - - - - - - - - - - - - >
-        ::Education
-    <- - - - - - - - - - - - - - - - -->
-    <h2>Education</h2>
-
-    <h3>University of Denver 2011-2012</h3>
-    <ul>
-        <li>Received a Master of Applied Science degree in Web Design and Development (ICT program).</li>
-        <li>Earned a 4.0 GPA.</li>
-    </ul>
-
-    <h3>Montana Tech of The University of Montana 2002-2006</h3>
-    <ul>
-        <li>Received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
-        <li>Earned a 4.0 GPA.</li>
-    </ul>
-
-    <!-- - - - - - - - - - - - - - - - >
-        ::Achievements
-    <- - - - - - - - - - - - - - - - -->
-    <h2>Achievements</h2>
-
-    <ul>
-        <li>Promoted to Senior Developer at Zenman for demonstrating  leadership and mentoring capacity, 2015.</li>
-        <li>Promoted to Lead Developer at Zenman for exhibiting advanced development skills, 2014.</li>
-        <li>Marine Corps Good Conduct Medal for three years of honorable and faithful service, 2009.</li>
-        <li>Marine Corps Certificate of Commendation for outstanding achievement in duties, 2007.</li>
-        <li>Outstanding Achievement award in the Professional and Technical Communication Program, 2006.</li>
-    </ul>
-
-    <!-- - - - - - - - - - - - - - - - >
-        ::Contact
-    <- - - - - - - - - - - - - - - - -->
-    <h2>Contact</h2>
-
-    <h3>Website</h3>
-    <a href="http://www.tcmulder.com">www.tcmulder.com</a>
-
-    <h3>GitHub</h3>
-    <a href="https://github.com/tcmulder" target="_blank">GitHub</a>
-
-    <h3>CodePen</h3>
-    <a href="http://codepen.io/tcmulder/" target="_blank">CodePen</a>
-
-    <h3>Twitter</h3>
-    <a href="https://twitter.com/tcmulder" target="_blank">Twitter</a>
+    </div> <!-- achieve -->
 
 </article><!-- .resume -->
