--- a/index.html
+++ b/index.html
@@ -156,25 +156,25 @@ title: Tomas Mulder's Resume
             </ul>
         </div>
 
-        <div class="exp__timeline">
+        <ul class="exp__timeline">
             <!-- in emmet... .exp__year{20$$@-}*16 -->
-            <span class="exp__year">today</span>
-            <span class="exp__year">2016</span>
-            <span class="exp__year">2015</span>
-            <span class="exp__year">2014</span>
-            <span class="exp__year">2013</span>
-            <span class="exp__year">2012</span>
-            <span class="exp__year">2011</span>
-            <span class="exp__year">2010</span>
-            <span class="exp__year">2009</span>
-            <span class="exp__year">2008</span>
-            <span class="exp__year">2007</span>
-            <span class="exp__year">2006</span>
-            <span class="exp__year">2005</span>
-            <span class="exp__year">2004</span>
-            <span class="exp__year">2003</span>
-            <span class="exp__year">2002</span>
-        </div>
+            <li class="exp__year"><span>today</span></li>
+            <li class="exp__year"><span>2016</span></li>
+            <li class="exp__year"><span>2015</span></li>
+            <li class="exp__year"><span>2014</span></li>
+            <li class="exp__year"><span>2013</span></li>
+            <li class="exp__year"><span>2012</span></li>
+            <li class="exp__year"><span>2011</span></li>
+            <li class="exp__year"><span>2010</span></li>
+            <li class="exp__year"><span>2009</span></li>
+            <li class="exp__year"><span>2008</span></li>
+            <li class="exp__year"><span>2007</span></li>
+            <li class="exp__year"><span>2006</span></li>
+            <li class="exp__year"><span>2005</span></li>
+            <li class="exp__year"><span>2004</span></li>
+            <li class="exp__year"><span>2003</span></li>
+            <li class="exp__year"><span>2002</span></li>
+        </ul>
 
     </div> <!-- .exp -->
 
@@ -188,13 +188,21 @@ title: Tomas Mulder's Resume
         <- - - - - - - - - - - - - - - - -->
         <h2>Achievements</h2>
 
-        <ul>
-            <li>Promoted to Senior Developer at Zenman for demonstrating  leadership and mentoring capacity, 2015.</li>
-            <li>Promoted to Lead Developer at Zenman for exhibiting advanced development skills, 2014.</li>
-            <li>Marine Corps Good Conduct Medal for three years of honorable and faithful service, 2009.</li>
-            <li>Marine Corps Certificate of Commendation for outstanding achievement in duties, 2007.</li>
-            <li>Outstanding Achievement award in the Professional and Technical Communication Program, 2006.</li>
-        </ul>
+        <div class="achieve__group achieve__group--senior">
+            <p>Promoted to Senior Developer at Zenman for demonstrating  leadership and mentoring capacity, 2015.</p>
+        </div>
+        <div class="achieve__group achieve__group--lead">
+            <p>Promoted to Lead Developer at Zenman for exhibiting advanced development skills, 2014.</p>
+        </div>
+        <div class="achieve__group achieve__group--goodcookie">
+            <p>Marine Corps Good Conduct Medal for three years of honorable and faithful service, 2009.</p>
+        </div>
+        <div class="achieve__group achieve__group--usmc">
+            <p>Marine Corps Certificate of Commendation for outstanding achievement in duties, 2007.</p>
+        </div>
+        <div class="achieve__group achieve__group--tech">
+            <p>Outstanding Achievement award in the Professional and Technical Communication Program, 2006.</p>
+        </div>
 
     </div> <!-- achieve -->
 
