Rough in icon slider

--- a/index.html
+++ b/index.html
@@ -20,53 +20,88 @@ title: Tomas Mulder's Resume
         <- - - - - - - - - - - - - - - - -->
         <h2>Qualifications</h2>
 
-        <h3>Capabilities</h3>
-        <ul>
-            <li>Website Development</li>
-            <li>WordPress Theming</li>
-            <li>Website Design</li>
-            <li>Process Formation</li>
-            <li>Leadership and Mentoring</li>
-            <li>Information Architecture</li>
-            <li>Graphics Design</li>
-            <li>Usability Testing</li>
-        </ul>
-
-        <h3>Technologies</h3>
-        <ul>
-            <li>HTML5 Markup</li>
-            <li>CSS3 Styling</li>
-            <li>SCSS Preprocessing</li>
-            <li>JavaScript/jQuery/Ajax</li>
-            <li>WordPress Codex</li>
-            <li>PHP/MySQL Back-End</li>
-            <li>Gulp/Grunt Build Tools</li>
-            <li>Git Version Control</li>
-        </ul>
-
-        <h3>Software</h3>
-        <ul>
-            <li>Sublime Text</li>
-            <li>iTerm</li>
-            <li>MAMP</li>
-            <li>VirtualBox/Vagrant</li>
-            <li>Photoshop</li>
-            <li>Illustrator</li>
-            <li>Atom</li>
-            <li>Chrome DevTools</li>
-        </ul>
-
-        <h3>Character</h3>
-        <ul>
-            <li>Hard Worker</li>
-            <li>Well Organized</li>
-            <li>Great Communicator</li>
-            <li>Effective Leader</li>
-            <li>Team Player</li>
-            <li>Strong Ethics</li>
-            <li>Quick Learner</li>
-            <li>Always Improving</li>
-        </ul>
+        <div class="icon-slider">
+            <input type="radio" name="icon-slider-nav" id="slide-1" checked />
+            <label for="slide-1" class="icon-slider__link">
+                <svg viewbox="0 0 1000 1000">
+                    <use xlink:href="images/general.sprite.svg#codepen"></use>
+                </svg>
+            </label>
+            <input type="radio" name="icon-slider-nav" id="slide-2" />
+            <label for="slide-2" class="icon-slider__link">
+                <svg viewbox="0 0 1000 1000">
+                    <use xlink:href="images/general.sprite.svg#codepen"></use>
+                </svg>
+            </label>
+            <input type="radio" name="icon-slider-nav" id="slide-3" />
+            <label for="slide-3" class="icon-slider__link">
+                <svg viewbox="0 0 1000 1000">
+                    <use xlink:href="images/general.sprite.svg#codepen"></use>
+                </svg>
+            </label>
+            <input type="radio" name="icon-slider-nav" id="slide-4" />
+            <label for="slide-4" class="icon-slider__link">
+                <svg viewbox="0 0 1000 1000">
+                    <use xlink:href="images/general.sprite.svg#codepen"></use>
+                </svg>
+            </label>
+            <div class="icon-slider__small-frame">
+                <div class="icon-slider__big-frame">
+                    <div class="icon-slider__slide">
+                        <h3>Capabilities</h3>
+                        <ul>
+                            <li>Website Development</li>
+                            <li>WordPress Theming</li>
+                            <li>Website Design</li>
+                            <li>Process Formation</li>
+                            <li>Leadership and Mentoring</li>
+                            <li>Information Architecture</li>
+                            <li>Graphics Design</li>
+                            <li>Usability Testing</li>
+                        </ul>
+                    </div>
+                    <div class="icon-slider__slide">
+                        <h3>Technologies</h3>
+                        <ul>
+                            <li>HTML5 Markup</li>
+                            <li>CSS3 Styling</li>
+                            <li>SCSS Preprocessing</li>
+                            <li>JavaScript/jQuery/Ajax</li>
+                            <li>WordPress Codex</li>
+                            <li>PHP/MySQL Back-End</li>
+                            <li>Gulp/Grunt Build Tools</li>
+                            <li>Git Version Control</li>
+                        </ul>
+                    </div>
+                    <div class="icon-slider__slide">
+                        <h3>Software</h3>
+                        <ul>
+                            <li>Sublime Text</li>
+                            <li>iTerm</li>
+                            <li>MAMP</li>
+                            <li>VirtualBox/Vagrant</li>
+                            <li>Photoshop</li>
+                            <li>Illustrator</li>
+                            <li>Atom</li>
+                            <li>Chrome DevTools</li>
+                        </ul>
+                    </div>
+                    <div class="icon-slider__slide">
+                        <h3>Character</h3>
+                        <ul>
+                            <li>Hard Worker</li>
+                            <li>Well Organized</li>
+                            <li>Great Communicator</li>
+                            <li>Effective Leader</li>
+                            <li>Team Player</li>
+                            <li>Strong Ethics</li>
+                            <li>Quick Learner</li>
+                            <li>Always Improving</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- - - - - - - - - - - - - - - - >
             ::Contact
