--- a/index.html
+++ b/index.html
@@ -47,56 +47,120 @@ title: Tomas Mulder's Resume
             </label>
             <div class="icon-slider__small-frame">
                 <div class="icon-slider__big-frame">
-                    <div class="icon-slider__slide">
+                    <div class="icon-slider__slide icon-slider__slide--1">
                         <h3>Capabilities</h3>
-                        <ul>
-                            <li>Website Development</li>
-                            <li>WordPress Theming</li>
-                            <li>Website Design</li>
-                            <li>Process Formation</li>
-                            <li>Leadership and Mentoring</li>
-                            <li>Information Architecture</li>
-                            <li>Graphics Design</li>
-                            <li>Usability Testing</li>
+                        <ul class="icon-slider__chart">
+                            <li class="icon-slider__stat"  data-per="10">
+                                <span>Website Development</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="20">
+                                <span>WordPress Theming</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="0">
+                                <span>Website Design</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="20">
+                                <span>Process Formation</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="50">
+                                <span>Leadership and Mentoring</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="90">
+                                <span>Information Architecture</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="70">
+                                <span>Graphics Design</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="100">
+                                <span>Usability Testing</span>
+                            </li>
                         </ul>
                     </div>
-                    <div class="icon-slider__slide">
+                    <div class="icon-slider__slide icon-slider__slide--2">
                         <h3>Technologies</h3>
-                        <ul>
-                            <li>HTML5 Markup</li>
-                            <li>CSS3 Styling</li>
-                            <li>SCSS Preprocessing</li>
-                            <li>JavaScript/jQuery/Ajax</li>
-                            <li>WordPress Codex</li>
-                            <li>PHP/MySQL Back-End</li>
-                            <li>Gulp/Grunt Build Tools</li>
-                            <li>Git Version Control</li>
+                        <ul class="icon-slider__chart">
+                            <li cl<li class="icon-slider__stat"  data-per="10">
+                                <span>HTML5 Markup</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="20">
+                                <span>CSS3 Styling</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="0">
+                                <span>SCSS Preprocessing</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="20">
+                                <span>JavaScript/jQuery/Ajax</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="50">
+                                <span>WordPress Codex</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="90">
+                                <span>PHP/MySQL Back-End</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="70">
+                                <span>Gulp/Grunt Build Tools</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="100">
+                                <span>Git Version Control</span>
+                            </li>
                         </ul>
                     </div>
-                    <div class="icon-slider__slide">
+                    <div class="icon-slider__slide icon-slider__slide--3">
                         <h3>Software</h3>
-                        <ul>
-                            <li>Sublime Text</li>
-                            <li>iTerm</li>
-                            <li>MAMP</li>
-                            <li>VirtualBox/Vagrant</li>
-                            <li>Photoshop</li>
-                            <li>Illustrator</li>
-                            <li>Atom</li>
-                            <li>Chrome DevTools</li>
+                        <ul class="icon-slider__chart">
+                            <li class="icon-slider__stat"  data-per="10">
+                                <span>Sublime Text</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="20">
+                                <span>iTerm</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="0">
+                                <span>MAMP</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="20">
+                                <span>VirtualBox/Vagrant</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="50">
+                                <span>Photoshop</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="90">
+                                <span>Illustrator</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="70">
+                                <span>Atom</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="100">
+                                <span>Chrome DevTools</span>
+                            </li>
                         </ul>
                     </div>
-                    <div class="icon-slider__slide">
+                    <div class="icon-slider__slide icon-slider__slide--4">
                         <h3>Character</h3>
-                        <ul>
-                            <li>Hard Worker</li>
-                            <li>Well Organized</li>
-                            <li>Great Communicator</li>
-                            <li>Effective Leader</li>
-                            <li>Team Player</li>
-                            <li>Strong Ethics</li>
-                            <li>Quick Learner</li>
-                            <li>Always Improving</li>
+                        <ul class="icon-slider__chart">
+                            <li class<li class="icon-slider__stat"  data-per="10">
+                                <span>Hard Worker</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="20">
+                                <span>Well Organized</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="0">
+                                <span>Great Communicator</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="20">
+                                <span>Effective Leader</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="50">
+                                <span>Team Player</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="90">
+                                <span>Strong Ethics</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="70">
+                                <span>Quick Learner</span>
+                            </li>
+                            <li class="icon-slider__stat"  data-per="100">
+                                <span>Always Improving</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
