Rework spacing to accomodate headers and footers

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 title: Tomas Mulder's Resume
 ---
-<article class="resume">
+<article class="timeline">
 
     <!-- - - - - - - - - - - - - - - - >
         ::Details Column
     <- - - - - - - - - - - - - - - - -->
-    <div class="main-torso__col detail">
+    <div class="timeline__col detail">
 
         <!-- - - - - - - - - - - - - - - - >
             ::Objective
@@ -79,7 +79,7 @@ title: Tomas Mulder's Resume
                     <div class="icon-slider__slide icon-slider__slide--2">
                         <h3>Technologies</h3>
                         <ul class="icon-slider__chart">
-                            <li cl<li class="icon-slider__stat"  data-per="10">
+                            <li class="icon-slider__stat"  data-per="10">
                                 <span>HTML5 Markup</span>
                             </li>
                             <li class="icon-slider__stat"  data-per="20">
@@ -137,7 +137,7 @@ title: Tomas Mulder's Resume
                     <div class="icon-slider__slide icon-slider__slide--4">
                         <h3>Character</h3>
                         <ul class="icon-slider__chart">
-                            <li class<li class="icon-slider__stat"  data-per="10">
+                            <li class="icon-slider__stat"  data-per="10">
                                 <span>Hard Worker</span>
                             </li>
                             <li class="icon-slider__stat"  data-per="20">
@@ -189,7 +189,7 @@ title: Tomas Mulder's Resume
     <!-- - - - - - - - - - - - - - - - >
         ::Experience Column
     <- - - - - - - - - - - - - - - - -->
-    <div class="main-torso__col exp">
+    <div class="timeline__col exp">
 
         <div class="exp__group exp__group--title">
             <h2>Experience</h2>
@@ -280,7 +280,7 @@ title: Tomas Mulder's Resume
     <!-- - - - - - - - - - - - - - - - >
         ::Achievements Column
     <- - - - - - - - - - - - - - - - -->
-    <div class="main-torso__col achieve">
+    <div class="timeline__col achieve">
 
         <!-- - - - - - - - - - - - - - - - >
             ::Achievements
