Apply partial styles for timeline

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@ title: Tomas Mulder's Resume
             ::Experience
         <- - - - - - - - - - - - - - - - -->
         <div class="exp__group exp__group--zenman">
-            <h3>Front-End Developer—Zenman Productions 2012-Present</h3>
+            <!-- 2012-Present -->
+            <h3>Front-End Developer—Zenman Productions 2</h3>
             <ul>
                 <li>Developed custom WordPress themes and other front-end and light back-end deliverables.</li>
                 <li>Crafted development processes and mentored junior developers to enhance Zenman’s level of quality.</li>
@@ -207,16 +208,14 @@ title: Tomas Mulder's Resume
         </div>
 
         <div class="exp__group exp__group--du">
-
-            <h3>University of Denver 2011-2012</h3>
+            <!-- 2011-2012 -->
+            <h3>University of Denver</h3>
             <ul>
                 <li>Received a Master of Applied Science degree in Web Design and Development (ICT program).</li>
                 <li>Earned a 4.0 GPA.</li>
             </ul>
-        </div>
-
-        <div class="exp__group exp__group--tcmulder">
-            <h3>Freelance Web Designer—tcmulder.com 2010-2012 </h3>
+            <!-- 2010-2012 -->
+            <h4>Freelance Web Designer—tcmulder.com</h4>
             <ul>
                 <li>Developed WordPress-powered websites from scratch and as redesigns.</li>
                 <li>Designed a logo and a website header graphic to meet client specifications.</li>
@@ -224,34 +223,36 @@ title: Tomas Mulder's Resume
         </div>
 
         <div class="exp__group exp__group--usmc">
-            <h3>Infantry Scout—1st LAR United States Marine Corps 2006-2010 </h3>
+            <!-- 2006-2010 -->
+            <h3>Infantry Scout—1st LAR United States Marine Corps</h3>
             <ul>
                 <li>Handled primary computer technology and communication needs for entire platoon as chief dispatcher.</li>
                 <li>Instructed hundreds of Marines in indoor simulated marksmanship trainer.\</li>
             </ul>
         </div>
 
-        <div class="exp__group exp__group--ptc">
-            <h3>Teachers Aide—PTC Department 2004-2006 </h3>
+        <div class="exp__group exp__group--t-creative">
+
+        </div>
+
+        <div class="exp__group exp__group--tech">
+            <!-- 2002-2006 -->
+            <h3>Montana Tech of The University of Montana</h3>
+            <ul>
+                <li>Received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
+                <li>Earned a 4.0 GPA.</li>
+            </ul>
+            <!-- 2004-2006 -->
+            <h4>Teachers Aide—PTC Department</h4>
             <ul>
                 <li>Assisted students as teacher’s aide in four web design courses.</li>
                 <li>Developed demonstration pieces for professors to present to their classes.</li>
             </ul>
-        </div>
-
-        <div class="exp__group exp__group--t-creative">
-            <h3>Freelance Visual Designer—t-Creative 2002-2006 </h3>
+            <!-- 2002-2006 -->
+            <h4>Freelance Visual Designer—t-Creative</h4>
             <ul>
                 <li>Created brochure, media CD, and two websites for PTC Department at Montana Tech.</li>
                 <li>Designed several small websites for clients, several that included PayPal ecommerce functionality.</li>
-            </ul>
-        </div>
-
-        <div class="exp__group exp__group--tech">
-            <h3>Montana Tech of The University of Montana 2002-2006</h3>
-            <ul>
-                <li>Received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
-                <li>Earned a 4.0 GPA.</li>
             </ul>
         </div>
 
@@ -305,4 +306,4 @@ title: Tomas Mulder's Resume
 
     </div> <!-- achieve -->
 
-</article><!-- .resume -->
+</article><!-- /.timeline -->
