Add demo signature header and default/custom scripts functionality

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 ---
 title: Tomas Mulder's Resume
+page_css: signature-sprite
 ---
+
+<div class="page page--1">0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br></div>
+<div class="page page--2">0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br></div>
+<div class="page page--3">0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br>0<br></div>
+
+
+
 <article class="timeline">
 
     <!-- - - - - - - - - - - - - - - - >
