--- a/index.html
+++ b/index.html
@@ -200,59 +200,53 @@ title: Tomas Mulder's Resume
         <- - - - - - - - - - - - - - - - -->
         <div class="exp__group exp__group--zenman">
             <!-- 2012-Present -->
-            <h3>Front-End Developer—Zenman Productions 2</h3>
+            <h3>Zenman Productions</h3>
+            <h4>Front-End Developer</h4>
             <ul>
-                <li>Developed custom WordPress themes and other front-end and light back-end deliverables.</li>
-                <li>Crafted development processes and mentored junior developers to enhance Zenman’s level of quality.</li>
+                <li>I developed custom WordPress themes and other miscellaneous front-end deliverables.</li>
+                <li>I crafted development processes and mentored my development team to achieve a level of quality we could be proud of.</li>
             </ul>
         </div>
 
         <div class="exp__group exp__group--du">
             <!-- 2011-2012 -->
             <h3>University of Denver</h3>
+            <h4>Graduate Student</h4>
             <ul>
-                <li>Received a Master of Applied Science degree in Web Design and Development (ICT program).</li>
-                <li>Earned a 4.0 GPA.</li>
-            </ul>
-            <!-- 2010-2012 -->
-            <h4>Freelance Web Designer—tcmulder.com</h4>
-            <ul>
-                <li>Developed WordPress-powered websites from scratch and as redesigns.</li>
-                <li>Designed a logo and a website header graphic to meet client specifications.</li>
+                <li>I received a Master of Applied Science degree in Web Design and Development (ICT program).</li>
+                <li>I developed WordPress-powered websites from templates (yuck) and from scratch as a freelancer.</li>
             </ul>
         </div>
 
         <div class="exp__group exp__group--usmc">
             <!-- 2006-2010 -->
-            <h3>Infantry Scout—1st LAR United States Marine Corps</h3>
+            <h3>1st LAR United States Marine Corps</h3>
+            <h4>Infantry Scout</h4>
             <ul>
-                <li>Handled primary computer technology and communication needs for entire platoon as chief dispatcher.</li>
-                <li>Instructed hundreds of Marines in indoor simulated marksmanship trainer.\</li>
+                <li>I volunteered to handle most of the computer technology and communication needs for an entire platoon as their chief dispatcher.</li>
+                <li>I instructed hundreds of Marines through Indoor Simulated Marksmanship Trainer computer technologies.</li>
             </ul>
-        </div>
-
-        <div class="exp__group exp__group--t-creative">
-
         </div>
 
         <div class="exp__group exp__group--tech">
             <!-- 2002-2006 -->
             <h3>Montana Tech of The University of Montana</h3>
+            <h4>Undergraduate Student</h4>
             <ul>
-                <li>Received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
-                <li>Earned a 4.0 GPA.</li>
+                <li>I received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
+                <li>Mostly I focused on HTML, CSS, jQuery, and ActionScript languages and Adobe design software.</li>
             </ul>
             <!-- 2004-2006 -->
             <h4>Teachers Aide—PTC Department</h4>
             <ul>
-                <li>Assisted students as teacher’s aide in four web design courses.</li>
-                <li>Developed demonstration pieces for professors to present to their classes.</li>
+                <li>I assisted students as a teacher’s aide in four web design courses, most of which I was taking for the first time concurrently.</li>
+                <li>I developed various demonstration pieces for professors to present to their classes, including my first CSS-based layout.</li>
             </ul>
             <!-- 2002-2006 -->
             <h4>Freelance Visual Designer—t-Creative</h4>
             <ul>
-                <li>Created brochure, media CD, and two websites for PTC Department at Montana Tech.</li>
-                <li>Designed several small websites for clients, several that included PayPal ecommerce functionality.</li>
+                <li>I was paid to create a brochure, media CD, and two websites for the PTC Department at Montana Tech.</li>
+                <li>I designed several small (<em>small</em>) websites for clients, a few of which included PayPal ecommerce functionality.</li>
             </ul>
         </div>
 
@@ -286,22 +280,33 @@ title: Tomas Mulder's Resume
         <!-- - - - - - - - - - - - - - - - >
             ::Achievements
         <- - - - - - - - - - - - - - - - -->
-        <h2>Achievements</h2>
+        <div class="achieve__group achieve__group--title">
+            <h2>Achievements</h2>
+        </div>
 
-        <div class="achieve__group achieve__group--senior">
-            <p>Promoted to Senior Developer at Zenman for demonstrating  leadership and mentoring capacity, 2015.</p>
+        <div class="achieve__group achieve__group--zen-principle">
+            <p>2016 Promoted to Principle Developer, in charge of all development-related company activities.</p>
         </div>
-        <div class="achieve__group achieve__group--lead">
-            <p>Promoted to Lead Developer at Zenman for exhibiting advanced development skills, 2014.</p>
+        <div class="achieve__group achieve__group--zen-lead">
+            <p>2015 Promoted to Lead Developer for demonstrating my leadership and mentoring capacity.</p>
         </div>
-        <div class="achieve__group achieve__group--goodcookie">
-            <p>Marine Corps Good Conduct Medal for three years of honorable and faithful service, 2009.</p>
+        <div class="achieve__group achieve__group--zen-senior">
+            <p>2014 Promoted to Senior Developer at Zenman for exhibiting advanced development skills.</p>
         </div>
-        <div class="achieve__group achieve__group--usmc">
-            <p>Marine Corps Certificate of Commendation for outstanding achievement in duties, 2007.</p>
+        <div class="achieve__group achieve__group--du-4">
+            <p>2012 Earned a 4.0 GPA.</p>
         </div>
-        <div class="achieve__group achieve__group--tech">
-            <p>Outstanding Achievement award in the Professional and Technical Communication Program, 2006.</p>
+        <div class="achieve__group achieve__group--usmc-good-cookie">
+            <p>2009 Earned Marine Corps Good Conduct Medal for three years of honorable and faithful service.</p>
+        </div>
+        <div class="achieve__group achieve__group--usmc-commendation">
+            <p>2007 Earned Marine Corps Certificate of Commendation for outstanding achievement in duties.</p>
+        </div>
+        <div class="achieve__group achieve__group--tech-4">
+            <p>2006 Earned a 4.0 GPA.</p>
+        </div>
+        <div class="achieve__group achieve__group--tech-achievement">
+            <p>2006 Earned the Outstanding Achievement award in the Professional and Technical Communication Program.</p>
         </div>
 
     </div> <!-- achieve -->
