Adjust details column and add conact section

--- a/index.html
+++ b/index.html
@@ -172,19 +172,35 @@ title: Tomas Mulder's Resume
                 <!-- - - - - - - - - - - - - - - - >
                     ::Contact
                 <- - - - - - - - - - - - - - - - -->
-                <h2>Contact</h2>
-
-                <h3>Website</h3>
-                <a href="http://www.tcmulder.com">www.tcmulder.com</a>
-
-                <h3>GitHub</h3>
-                <a href="https://github.com/tcmulder" target="_blank">GitHub</a>
-
-                <h3>CodePen</h3>
-                <a href="http://codepen.io/tcmulder/" target="_blank">CodePen</a>
-
-                <h3>Twitter</h3>
-                <a href="https://twitter.com/tcmulder" target="_blank">Twitter</a>
+                <div class="contact-links">
+                    <div class="contact-links__title">
+                        <h2>Contact</h2>
+                    </div>
+                    <a href="mailto:rockymountainlake@gmail.com" target="_blank" class="contact-links__group">
+                        <h3>Email</h3>
+                        <svg viewbox="0 0 1000 1000" class="contact-links__icon">
+                            <use xlink:href="images/general.sprite.svg#mail"></use>
+                        </svg>
+                    </a>
+                    <a href="https://github.com/tcmulder" target="_blank" class="contact-links__group">
+                        <h3>GitHub</h3>
+                        <svg viewbox="0 0 1000 1000" class="contact-links__icon">
+                            <use xlink:href="images/general.sprite.svg#github"></use>
+                        </svg>
+                    </a>
+                    <a href="http://codepen.io/tcmulder/" target="_blank" class="contact-links__group">
+                        <h3>CodePen</h3>
+                        <svg viewbox="0 0 1000 1000" class="contact-links__icon">
+                            <use xlink:href="images/general.sprite.svg#codepen"></use>
+                        </svg>
+                    </a>
+                    <a href="https://twitter.com/tcmulder" target="_blank" class="contact-links__group">
+                        <h3>Twitter</h3>
+                        <svg viewbox="0 0 1000 1000" class="contact-links__icon">
+                            <use xlink:href="images/general.sprite.svg#twitter"></use>
+                        </svg>
+                    </a>
+                </div>
 
             </div> <!-- .detail__inner -->
         </div> <!-- .detail -->
